# ft_printf

./: CMakeLists.txt  Makefile  a.out  cast.c  cast_flag_Cc.c  cast_flag_Ddi.c  cast_flag_Oo.c  cast_flag_Ss.c  cast_flag_Uu.c  cast_flag_Xx.c  cast_flag_p.c  find.c  ft_printf  ft_printf.c  ft_printf.h  ft_printf.h.gch  ft_putnbr_long.c  ft_qualifier.c  ft_strlen_uintmax.c  itoa_b.c  itoa_b_uintmax.c  main.c  main2.c  parsing.c  parsing_d.c  pf.sh
123/: parsing.c  treatment.c
includes/: ft_printf.h
libft/: Makefile
rabota/: 123.c  a.out  makefl_test  parsing_C_c.c  parsing_O_o.c  parsing_S_s.c  parsing_U_u.c  parsing_X_x.c  parsing_d_i.c  parsing_p.c  text
srcs/: cast.c  cast_flag_Cc.c  cast_flag_Ddi.c  cast_flag_Oo.c  cast_flag_Ss.c  cast_flag_Uu.c  cast_flag_Xx.c  cast_flag_c.c  cast_flag_di.c  cast_flag_o.c  cast_flag_p.c  cast_flag_s.c  cast_flag_u.c  cast_flag_x.c  find.c  ft_lenwchar.c  ft_printf.c  ft_putnbr_long.c  ft_putstr_len.c  ft_putwchar.c  ft_qualifier.c  ft_strchr.c  ft_strdup.c  ft_strrev.c  help.c  help_2.c  help_3.c  help_flag.c  help_flag_2.c  itoa_b.c  itoa_b_uintmax.c  no_spec.c  parsing.c
www/: Makefile  main2.c  print_test.c  test.c  test_printf.c
www/rabota/: 123.c  makefl_test
